--- a/views/home-page.handlebars
+++ b/views/home-page.handlebars
@@ -6,15 +6,15 @@
 
   <div class="container card w-75 mt-4 blog-post" id="postCards">
 
-    <div class="card-body postCards" id="{{id}}">
+    <div class="card-body postCards">
 
       <div class="row m-2">
 
         <div class="col-lg-8 col-sm-10 title ml-2 border-bottom">
-          <h2 class="p-1">{{title}}</h2>
+          <h2 class="p-1"><a href="/post/{{id}}">{{title}}</a></h2>
         </div>
         <div class="col-lg-4 col-sm-10 name-date border-bottom">
-          <p class="m-2">{{username}} {{format_date dateCreated}}</p>
+          <p class="m-2">{{User.username}} {{format_date dateCreated}}</p>
         </div>
 
       </div>
